# daily-brief

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: ci.yml  deploy.yml
daily_brief/: config.yaml  lambda_handler.py
daily_brief/cli/: main.py
daily_brief/llm/: build_graph.py  get_model.py  router.py  state.py
daily_brief/nodes/: briefing_generator.py  cross_level_connector.py  new_gatherer.py  remove_dup_stories.py  scope_node.py  story_analyzer.py
daily_brief/utils/: load_config.py  phoenix_trace.py  sanitize_output.py
data/: tavily2_ollama_world_Iran.json  test1.json  test2.json
