[project]
name = "daily-brief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix-otel>=0.15.0",
    "click>=8.3.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openrouter>=0.2.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.3",
    "openinference-instrumentation-langchain>=0.1.61",
    "python-dotenv>=1.2.2",
]

[project.scripts]
brief = "daily_brief.cli.main:dailybrief"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["daily_brief"]
